--- a/bootstrap-clone/src/App.css
+++ b/bootstrap-clone/src/App.css
@@ -44,6 +44,10 @@
   box-sizing: border-box;
 }
 
+.navbar-expand{
+  height: 260px;
+}
+
 .container{
   width: 100%;
   display: flex;
@@ -95,6 +99,33 @@
   /* margin-top: 4px; */
 }
 
-.navbar-collapse{
+.collapse{
   display: none;
+}
+
+.navbar-nav{
+  width: auto;
+  list-style: none;
+  padding: 0;
+  /* display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start; */
+}
+
+.nav-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.nav-link{
+  color: #fff;
+  text-decoration: none;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 0.95rem;
+  letter-spacing: 0.0625em;
+  padding: 8px 0px;
+  height: 22px;
 }
