--- a/bootstrap-clone/src/App.css
+++ b/bootstrap-clone/src/App.css
@@ -46,6 +46,19 @@
 
 .navbar-expand{
   height: 260px;
+  animation-name: expand-menu;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
+}
+
+@keyframes expand-menu {
+  0%{
+    height: 72px;
+  }
+  100%{
+    height: 260px;
+  }
 }
 
 .container{
@@ -107,20 +120,60 @@
   width: auto;
   list-style: none;
   padding: 0;
-  /* display:flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start; */
+  /* animation: expand-text;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1; */
+}
+
+.expand{
+  animation: expand-text;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
 }
 
 .nav-item{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  /* animation: expand-text;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1; */
+}
+
+.navbar-nav li:nth-of-type(1){
+  animation-delay: 100ms;
+}
+
+.navbar-nav li:nth-of-type(2){
+  animation-delay: 200ms;
+}
+
+.navbar-nav li:nth-of-type(3){
+  animation-delay: 300ms;
+}
+
+.navbar-nav li:nth-of-type(4){
+  animation-delay: 400ms;
+}
+
+.navbar-nav li:nth-of-type(5){
+  animation-delay: 500ms;
+}
+
+@keyframes expand-text {
+  0%{
+    display: none;
+  }
+  100%{
+    display: block;
+  }
 }
 
 .nav-link{
-  color: #fff;
+  color: purple;
   text-decoration: none;
   outline: none;
   text-transform: uppercase;
