--- a/bootstrap-clone/src/App.css
+++ b/bootstrap-clone/src/App.css
@@ -34,8 +34,9 @@
   left: 0;
   z-index: 100;
   height: 72px;
+  /* width: 100vw; */
 
-  margin: 0 5% 0 0%;
+  /* margin: 0 5% 0 0%; */
 
   /* display: flex; */
   /* flex-wrap: wrap; */
@@ -82,12 +83,14 @@
 }
 
 .container{
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-right: 0.75rem;
   padding-left: 0.75rem;
+  /* margin-right: 1%; */
+  /* margin-left: 1%; */
 }
 
 .navbar-brand{
@@ -256,6 +259,10 @@
   display: block;
 }
 
+.last{
+  margin: 0;
+}
+
 .masthead{
   /* height: 518px; */
   padding-top: 168px;
@@ -274,6 +281,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 12.5%
 }
 
 .masthead-subheading{
@@ -309,9 +317,122 @@
   background-color: #faca1f;
 }
 
+.page-section{
+  padding: 6rem 0;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.container-section{
+  /* width: 100%; */
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+.text-center{
+  text-align: center !important;
+}
+
+.section-heading{
+  font-size: 2.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.section-subheading{
+  font-size: 1rem;
+  font-weight: 400;
+  font-style: italic;
+  margin-bottom: 4rem;
+  color: #6c757d;
+  text-align: center;
+}
+
+.row{
+  display: flex;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin-right: -0.75rem;
+  margin-left: -0.75rem;
+  box-sizing: border-box;
+}
+
+.col-md-4{
+  position: relative;
+  width: 100%;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  box-sizing: border-box;
+}
+
+.fa-stack{
+  display: inline-block;
+  height: 2em;
+  position: relative;
+  width: 2.5em;
+  font-size: 4em;
+  box-sizing: border-box;
+}
+
+.svg-inline{
+  /* overflow: visible; */
+  height: 2em;
+  width: 2.5em;
+  color: #fed136;
+}
+
+.circle{
+  position:absolute;
+  top: 0;
+  left: 0;
+}
+
+.object{
+  color: #fff;
+  height: 1em;
+  width: 1.25em;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+}
+
+.my-3{
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.text-muted{
+  color: #6c757d;
+  line-height: 1.75;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+@media(min-width: 576px){
+  .container-section{
+    max-width: 540px;
+  }
+}
+
 @media(min-width: 768px){
+  .row{
+    flex-wrap: nowrap;
+  }
+  .container-section{
+    max-width: 720px;
+  }
   .navbar{
-    margin: 0 3% 0 0;
+    /* margin: 0 3% 0 0; */
   }
   .masthead-subheading{
     font-size: 2.25rem;
@@ -331,6 +452,9 @@
 }
 
 @media(min-width: 992px){
+  .container-section{
+    max-width: 960px;
+  }
   .navbar-toggler{
     display: none;
   }
@@ -341,6 +465,9 @@
   }
   .nav-item{
     margin-right: 24px;
+  }
+  .last{
+    margin: 0;
   }
   .navbar{
     display: flex;
@@ -364,7 +491,7 @@
     display: flex;
     flex-direction: row;
     /* justify-content: space-around; */
-    margin-left: 215px;
+    margin-left: 320px;
     /* margin-right: 7% */
   }
   .bootstrapimg{
@@ -372,5 +499,14 @@
   }
   #mainNav{
     background-color: transparent;
+  }
+}
+
+@media(min-width: 1200px){
+  .container-section{
+    max-width: 1140px;
+  }
+  .navbar-nav{
+    margin-left: 450px;
   }
 }
