--- a/bootstrap-clone/src/App.css
+++ b/bootstrap-clone/src/App.css
@@ -4,6 +4,7 @@
   line-height: 1.5;
   color: #212529;
   text-align: left;
+  /* scroll-behavior: smooth; */
 }
 
 /* @media (prefers-reduced-motion: no-preference) {
@@ -34,7 +35,7 @@
   left: 0;
   z-index: 100;
   height: 72px;
-  /* width: 100vw; */
+  width: 100%;
 
   /* margin: 0 5% 0 0%; */
 
@@ -131,7 +132,7 @@
   cursor: pointer;
 }
 
-.svg-inline{
+.svg-inline-bars{
   width: 10.5px;
   height: 12px;
   margin-left: 4px;
@@ -418,6 +419,24 @@
   margin-bottom: 1rem;
 }
 
+/* .scrollup{
+  animation-name: scroll-up;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-delay: 0.5s;
+}
+
+@keyframes scroll-up{
+  0%{
+
+  }
+  100%{
+
+  }
+} */
+
 @media(min-width: 576px){
   .container-section{
     max-width: 540px;
@@ -473,6 +492,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     animation-name: trans;
     animation-duration: 0.3s;
     animation-timing-function: linear;
@@ -491,7 +511,7 @@
     display: flex;
     flex-direction: row;
     /* justify-content: space-around; */
-    margin-left: 320px;
+    margin-left: 220px;
     /* margin-right: 7% */
   }
   .bootstrapimg{
@@ -507,6 +527,6 @@
     max-width: 1140px;
   }
   .navbar-nav{
-    margin-left: 450px;
+    margin-left: 390px;
   }
 }
